// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DraggableMenu component edit render correctly 1`] = `
<div
  className="DraggableMenu"
>
  <Menu
    className=""
    focusable={false}
    mode="inline"
    onClick={[Function]}
    onOpenChange={[MockFunction]}
    openKeys={
      Array [
        "all",
      ]
    }
    prefixCls="ant-menu"
    selectedKeys={
      Array [
        "dragMenuItemall",
      ]
    }
    theme="light"
  >
    <MenuItem
      key="back"
      onClick={[Function]}
    >
      <Icon
        theme="outlined"
        type="arrow-left"
      />
      <span>
        保存并返回
      </span>
    </MenuItem>
    <SubMenu
      key="all"
      title={
        <span>
          <Icon
            theme="outlined"
            type="laptop"
          />
          <span>
            全部
          </span>
        </span>
      }
    >
      <DragMenuItem
        item={
          Object {
            "group": "all",
            "groupName": "全部",
            "key": "all",
            "order": 0,
            "style": Object {},
            "text": "全部",
          }
        }
        key="dragMenuItemallundefined"
      />
    </SubMenu>
  </Menu>
</div>
`;

exports[`DraggableMenu module edit render correctly 1`] = `
<div
  className="DraggableMenu"
>
  <Menu
    className=""
    focusable={false}
    mode="inline"
    onClick={[Function]}
    onOpenChange={[MockFunction]}
    openKeys={
      Array [
        "all",
      ]
    }
    prefixCls="ant-menu"
    selectedKeys={
      Array [
        "dragMenuItemall",
      ]
    }
    theme="light"
  >
    <MenuItem
      key="back"
      onClick={[Function]}
    >
      <Icon
        theme="outlined"
        type="arrow-left"
      />
      <span>
        首页
      </span>
    </MenuItem>
    <SubMenu
      key="all"
      title={
        <span>
          <Icon
            theme="outlined"
            type="laptop"
          />
          <span>
            全部
          </span>
        </span>
      }
    >
      <DragMenuItem
        item={
          Object {
            "group": "all",
            "groupName": "全部",
            "key": "all",
            "order": 0,
            "style": Object {},
            "text": "全部",
          }
        }
        key="dragMenuItemallundefined"
      />
    </SubMenu>
  </Menu>
</div>
`;
